Update package.json to specify module type and modify server.js for dotenv configuration and import path adjustment

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bold-ex",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "node server.js",
-    "dev": "nodemon server.js",
-    "type": "module"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "expressjs"
